# ansible-virtualization

./: .ansible-lint  .gitignore  .travis.yml  README.md  galaxy.yml  pyproject.toml  requirements-collections.yml  requirements-dev.txt  requirements-monorepo.yml  requirements-standalone.yml  requirements.txt  requirements.yml  tox.ini
.github/workflows/: molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: Vagrantfile  converge.yml  molecule.yml
molecule/default/tests/: test_default.py
molecule/kvm/: converge.yml  molecule.yml
molecule/parallels/: Vagrantfile  converge.yml  molecule.yml
tasks/: main.yml  requirements.yml  users.yml
